--- a/projects/creating_customer_segments/report.html
+++ b/projects/creating_customer_segments/report.html
@@ -11835,11 +11835,11 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># Display a description of the dataset</span>
-<span class="n">display</span><span class="p">(</span><span class="n">data</span><span class="o">.</span><span class="n">describe</span><span class="p">())</span>
+<span class="n">display</span><span class="p">(</span><span class="n">data</span><span class="o">.</span><span class="n">describe</span><span class="p">()</span><span class="o">.</span><span class="n">round</span><span class="p">(</span><span class="mi">2</span><span class="p">))</span>
 </pre></div>
 
 </div>
@@ -11869,75 +11869,75 @@ div#notebook {
   <tbody>
     <tr>
       <th>count</th>
-      <td>440.000000</td>
-      <td>440.000000</td>
-      <td>440.000000</td>
-      <td>440.000000</td>
-      <td>440.000000</td>
-      <td>440.000000</td>
+      <td>440.00</td>
+      <td>440.00</td>
+      <td>440.00</td>
+      <td>440.00</td>
+      <td>440.00</td>
+      <td>440.00</td>
     </tr>
     <tr>
       <th>mean</th>
-      <td>12000.297727</td>
-      <td>5796.265909</td>
-      <td>7951.277273</td>
-      <td>3071.931818</td>
-      <td>2881.493182</td>
-      <td>1524.870455</td>
+      <td>12000.30</td>
+      <td>5796.27</td>
+      <td>7951.28</td>
+      <td>3071.93</td>
+      <td>2881.49</td>
+      <td>1524.87</td>
     </tr>
     <tr>
       <th>std</th>
-      <td>12647.328865</td>
-      <td>7380.377175</td>
-      <td>9503.162829</td>
-      <td>4854.673333</td>
-      <td>4767.854448</td>
-      <td>2820.105937</td>
+      <td>12647.33</td>
+      <td>7380.38</td>
+      <td>9503.16</td>
+      <td>4854.67</td>
+      <td>4767.85</td>
+      <td>2820.11</td>
     </tr>
     <tr>
       <th>min</th>
-      <td>3.000000</td>
-      <td>55.000000</td>
-      <td>3.000000</td>
-      <td>25.000000</td>
-      <td>3.000000</td>
-      <td>3.000000</td>
+      <td>3.00</td>
+      <td>55.00</td>
+      <td>3.00</td>
+      <td>25.00</td>
+      <td>3.00</td>
+      <td>3.00</td>
     </tr>
     <tr>
       <th>25%</th>
-      <td>3127.750000</td>
-      <td>1533.000000</td>
-      <td>2153.000000</td>
-      <td>742.250000</td>
-      <td>256.750000</td>
-      <td>408.250000</td>
+      <td>3127.75</td>
+      <td>1533.00</td>
+      <td>2153.00</td>
+      <td>742.25</td>
+      <td>256.75</td>
+      <td>408.25</td>
     </tr>
     <tr>
       <th>50%</th>
-      <td>8504.000000</td>
-      <td>3627.000000</td>
-      <td>4755.500000</td>
-      <td>1526.000000</td>
-      <td>816.500000</td>
-      <td>965.500000</td>
+      <td>8504.00</td>
+      <td>3627.00</td>
+      <td>4755.50</td>
+      <td>1526.00</td>
+      <td>816.50</td>
+      <td>965.50</td>
     </tr>
     <tr>
       <th>75%</th>
-      <td>16933.750000</td>
-      <td>7190.250000</td>
-      <td>10655.750000</td>
-      <td>3554.250000</td>
-      <td>3922.000000</td>
-      <td>1820.250000</td>
+      <td>16933.75</td>
+      <td>7190.25</td>
+      <td>10655.75</td>
+      <td>3554.25</td>
+      <td>3922.00</td>
+      <td>1820.25</td>
     </tr>
     <tr>
       <th>max</th>
-      <td>112151.000000</td>
-      <td>73498.000000</td>
-      <td>92780.000000</td>
-      <td>60869.000000</td>
-      <td>40827.000000</td>
-      <td>47943.000000</td>
+      <td>112151.00</td>
+      <td>73498.00</td>
+      <td>92780.00</td>
+      <td>60869.00</td>
+      <td>40827.00</td>
+      <td>47943.00</td>
     </tr>
   </tbody>
 </table>
@@ -12061,8 +12061,9 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Samples (0,1) could potentially be from a restaurant, as a significant portion of their sales is composed of Fresh foods.</p>
-<p>Sample (2) could potentially be a market or retail grocery store, as relatively little of their sales are of Fresh foods and most are of Grocery.  Also, Sample (2) has a much larger proportion of Delicatessen foods than Samples (0,1), which could indicate that the establishment is a market of some kind.</p>
+<p>Sample (0) has about the average amount of Fresh spending (falling in the 3rd quartile rank-wise), below average Milk spending (2nd quartile), very slightly below average Grocery (although still falling in the 3rd quartile), well below average Frozen spending (1st quartile), slightly above average Detergents_Paper spending (3rd quartile), and well below average Delicatessen spending (2nd quartile).  Based on these characteristics, Sample (0) could potentially be from a restaurant, as it has above average spending on Fresh foods but below averge on Frozen foods and Delicatessen, potentially implying that it sold freshly prepared food as opposed to groceries or pre-prepared meals.</p>
+<p>Sample (1) has slightly below average Fresh spending (almost precisely 50th percentile), below average Milk spending (2nd quartile), average Grocery spending (3rd quartile), significantly below average Frozen spending (1st quartile), above average Detergents_Paper spending (4th quartile), and well below average Delicatessen spending (1st quartile).  Similar to Sample (0), Sample (1) has close to average Fresh spending, while significantly below average Frozen and Deli spending.  Unlike Sample (0), Sample (1) has significantly above average Detergents_Paper spending.  We might hypothesize that this could also be a restaurant, but one that specializes in take-out type meals, which would account for the much larger Detergents_Paper spending.</p>
+<p>Sample (2) has well below average Fresh spending (1st quartile), below average Milk spending (almost precisely 50th percentile), above average Grocery spending (4th quartile), below average Frozen (2nd quartile), above average Detergents_Paper (4th quartile), and above average Delicatessen (4th quartile).  Sample (2) could potentially be a market or retail grocery store, as relatively little of their sales are of Fresh foods and most are of Grocery.  Also, Sample (2) has a much larger proportion of Delicatessen foods than Samples (0,1), which could indicate that the establishment is a market of some kind.</p>
 
 </div>
 </div>
@@ -21838,7 +21839,11 @@ Uh0mjSRJkiRJklSHSSNJkiRJkiTV8X9YdlSWkJITTQAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The first two principal components explain a total of 71.3% of the variance.  The first four principal components explain 83.3% of the total variance.  Based on the visualization, the first component appears to be a measure of the the difference between the amount of Fresh and Frozen food and the amount of the other four types, with particular sensitivity for Detergents_Paper.  I say that this is a measurement of the difference because the value of the component would have its largest magnitude when these groups moved in opposite directions: a low amount of Fresh/Frozen and large amount of Detergent would produce a large positive value, while a high amount of Fresh/Frozen and a low amount of Detergent would produce a low value.  The second component represents a measure of the combined spending on Fresh, Grocery and Delicatessen, which may help to indicate whether a customer sells a large amount of food freshly prepared from these items.  The third component represents the difference in spending primarily between Fresh and the combined Frozen and Delicatessen.  The fourth component represents the difference in spending primarily between Frozen and combined Fresh and Delicatessen.</p>
+<p>The first two principal components explain a total of 71.3% of the variance.  The first four principal components explain 93.3% of the total variance.</p>
+<p>Based on the visualization, the first component appears to be a measure of the the difference between the amount of Fresh and Frozen food and the amount of the other four types, with particular sensitivity for Detergents_Paper.  I say that this is a measurement of the difference because the value of the component would have its largest magnitude when these groups moved in opposite directions: a low amount of Fresh/Frozen and large amount of Detergent would produce a large positive value, while a high amount of Fresh/Frozen and a low amount of Detergent would produce a low value.</p>
+<p>The second component represents a measure of the combined spending on Fresh, Grocery and Delicatessen, which may help to indicate whether a customer sells a large amount of food freshly prepared from these items.  All of the weights in this component are positive, however Milk, Grocery and Detergent have a significantly lower weight than Fresh, Grocery and Deli.</p>
+<p>The third component represents the difference in spending primarily between Fresh and Detergents_Paper versus the combined Frozen and Delicatessen.  Fresh, Grocery and Detergent_Paper have positive weights (Grocery near zero), while Milk, Frozen and Deli have negative weights (Milk near zero).  This component may be identifying variation between a restaurant who sells mostly meals prepared on premises and a market or deli that sells pre-made and frozen meals.</p>
+<p>The fourth component represents the difference in spending primarily between Frozen and combined Fresh and Delicatessen.  Milk, Grocery, Frozen, and Detergents_Paper all have positive weights (Milk and Grocery near zero), while Fresh and Deli have negative weights.  This component may be identifying variations between deli type customers who may sell something like sandwiches made from Fresh and Deli ingredients; and market or convenient store type customers who may sell something like frozen or pre-made dinners.</p>
 
 </div>
 </div>
@@ -23458,8 +23463,8 @@ dtype: float64
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Segment 0 is characterized by a high level of Milk, Grocery and Deetergents spending, especially relative to Fresh and Frozen spending. Based upon these characteristics, Segment 0 might represent a market or grovery type store, where they predominately sell foods that are not necessarily prepared on premises.</p>
-<p>Segment 1 is characterized by a high level of spending on Fresh and Frozen foods, especially relative to Grocery and Detergent.  The high level of Fresh and Frozen spending may indicate that this is a restaurant type store, where much of the spending is on ingredients that are used to in the preparation of meals created on premises.</p>
+<p>Segment 0 (the right hand, red-dotted side in the visualization) is characterized by a high level of Milk, Grocery and Deetergents spending, especially relative to Fresh and Frozen spending. Based upon these characteristics, Segment 0 might represent a market or grovery type store, where they predominately sell foods that are not necessarily prepared on premises.</p>
+<p>Segment 1 (the left hand, purple-dotted side in the visualization) is characterized by a high level of spending on Fresh and Frozen foods, especially relative to Grocery and Detergent.  The high level of Fresh and Frozen spending may indicate that this is a restaurant type store, where much of the spending is on ingredients that are used to in the preparation of meals created on premises.</p>
 
 </div>
 </div>
@@ -23511,7 +23516,7 @@ Sample point 2 predicted to be in Cluster 0
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>All three sample points are in Cluster/Segment 0.</p>
+<p>All three sample points are in Cluster/Segment 0 (more Retail than Restaurant).  That prediction is consistent with our understanding for Sample 2; however, it contradicts our original intepretation of Samples (0,1).  I think that this is most likely due to the fact that our original intepretation significantly underestimated the importance of the Detergents_Paper feature in categorizing the customer segments.  From the first principal component, we can see that Detergents_Paper has the single largest absolute weight and is directionally opposite the combined Fresh and Frozen components.  Our original intepretation focused primarily on the Fresh and Frozen components, but did not sufficiently recognize the information from the Detergents_Paper feature.  To our benefit, Samples (0,1) both fall fairly close to the boundary of the two clusters, so it is not entirely unreasonable that we would misplace them solely upon initial inspection.</p>
 
 </div>
 </div>
